Get top-bar information displaying correctly and aligned.

--- a/styles.css
+++ b/styles.css
@@ -147,17 +147,49 @@ span {
 .top-bar-1 {
     grid-column: 1 / span 12;
     grid-row: 1 / span 1;
-    /* display: flex;
-    justify-content: space-around; */
-    margin-bottom: 5%;
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    grid-template-rows: 1fr;
+}
+
+.tp-bar-search {
+    grid-column: 1 / span 8 ;
+    grid-row: 1;
+    display: flex;
+    align-items: center;
+}
+
+.top-bar-profile {
+    grid-column: 9 / span 3;
+    grid-row: 1;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
 }
 
 .top-bar-2 {
     grid-column: 1 / span 12;
     grid-row: 2 / span 1;
-    display: flex;
-    justify-content: space-around;
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    grid-template-rows: 1fr;
 }
+
+.top-bar2-profile {
+    grid-column: 1 / span 8 ;
+    grid-row: 1;
+    display: flex;
+    align-items: center;
+}
+
+.top-bar2-options {
+    grid-column: 9 / span 3;
+    grid-row: 1;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+}
+
 
 img.search-glass {
     width: 24px;
